Make sure titles don't overflow in buttons

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -48,80 +48,114 @@ table.data-table thead {
 .container-flex--contain.tab__pane[data-show=false] {
   display: none; }
 
-/* Ember overwrite */
-
-$ember-power-select-border-color: #cbd2da;
-$ember-power-select-border-radius: 0;
 
 
+/* ==========================================================================
+  Style overwrite ember-power-select
+ ========================================================================== */
 
-// Variables
+/* basic colors and sizing of dropdown */
 
-// Backgrounds
-$ember-power-select-background-color: red !default;
-$ember-power-select-disabled-background-color: #eeeeee !default;
-$ember-power-select-multiple-selection-background-color: #e4e4e4 !default;
-$ember-power-select-highlighted-background: #5897fb !default;
-$ember-power-select-selected-background: #dddddd !default;
+.ember-power-select-dropdown.ember-basic-dropdown-content--below,
+.ember-power-select-dropdown.ember-basic-dropdown-content--above,
+.ember-power-select-dropdown.ember-basic-dropdown-content--in-place,
+.ember-power-select-trigger {
+  border-radius: 0;
+  border-color: #cbd2da;
+  color: #333;
+}
 
-// Texts
-$ember-power-select-text-color: inherit !default;
-$ember-power-select-placeholder-color: #999999 !default;
-$ember-power-select-highlighted-color: #ffffff !default;
-$ember-power-select-disabled-option-color: #999999 !default;
-$ember-power-select-multiple-selection-color: #333333 !default;
+.ember-basic-dropdown-content.ember-power-select-dropdown.ember-basic-dropdown-content--below {
+  box-shadow: 0 2px 2px rgba(165, 179, 194, 0.5);
+}
 
-// Borders
-$ember-power-select-border-color: #aaaaaa !default;
-$ember-power-select-focus-border-color: $ember-power-select-border-color !default;
-$ember-power-select-default-border: 1px solid $ember-power-select-border-color !default;
-$ember-power-select-default-focus-border: 1px solid $ember-power-select-focus-border-color !default;
+.ember-power-select-trigger {
+  line-height: 4.5rem;
+  padding: 0 1rem;
+  overflow: hidden;
+}
 
-$ember-power-select-trigger-border: $ember-power-select-default-border !default;
-$ember-power-select-trigger-border-top: $ember-power-select-trigger-border !default;
-$ember-power-select-trigger-border-bottom: $ember-power-select-trigger-border !default;
-$ember-power-select-trigger-border-right: $ember-power-select-trigger-border !default;
-$ember-power-select-trigger-border-left: $ember-power-select-trigger-border !default;
-$ember-power-select-active-trigger-border: $ember-power-select-default-focus-border !default;
-$ember-power-select-active-trigger-border-top: $ember-power-select-active-trigger-border !default;
-$ember-power-select-active-trigger-border-bottom: $ember-power-select-active-trigger-border !default;
-$ember-power-select-active-trigger-border-right: $ember-power-select-active-trigger-border !default;
-$ember-power-select-active-trigger-border-left: $ember-power-select-active-trigger-border !default;
-$ember-power-select-dropdown-border: $ember-power-select-default-focus-border !default;
-$ember-power-select-search-field-border: $ember-power-select-default-border !default;
-$ember-power-select-search-field-focus-border: $ember-power-select-default-focus-border !default;
+.step .ember-power-select-trigger {
+  padding-right: 4.5rem;
+  height: 4.5rem;
+  font-size: 2rem;
+}
 
-$ember-power-select-dropdown-top-border: $ember-power-select-dropdown-border !default;
-$ember-power-select-dropdown-right-border: $ember-power-select-dropdown-border !default;
-$ember-power-select-dropdown-bottom-border: $ember-power-select-dropdown-border !default;
-$ember-power-select-dropdown-left-border: $ember-power-select-dropdown-border !default;
+.ember-power-select-trigger.ember-basic-dropdown-trigger.ember-view.ember-power-select-trigger--active {
+  border-color: #cbd2da;
+  box-shadow: none;
+}
 
-$ember-power-select-dropdown-contiguous-border: none !default;
+.ember-power-select-trigger.ember-basic-dropdown-trigger.ember-view.ember-power-select-trigger--active:focus {
+  outline: none;
+}
 
-$ember-power-select-multiple-option-border-color: gray !default;
-$ember-power-select-multiple-option-border: 1px solid $ember-power-select-multiple-option-border-color !default;
+.ember-power-select-search-input:focus {
+  outline: none;
+  border-color: #ffc515;
+  box-shadow: inset 0 0 0 1px #ffc515;
+}
 
-// Borders radius
-$ember-power-select-default-border-radius: 4px !default; // General border radius
-$ember-power-select-trigger-default-border-radius: $ember-power-select-default-border-radius !default;
-$ember-power-select-dropdown-default-border-radius: $ember-power-select-default-border-radius !default;
+/* Select options
+ ========================================================================== */
 
-$ember-power-select-opened-border-radius: 0 !default; // Border radius of the side of the dropdown and the trigger where they touch
+.ember-power-select-option.ember-power-select-option--search-message {
+  padding-left: 0.5rem;
+  color: #999999;
+}
 
-$ember-power-select-search-input-border-radius: 0 !default;
-$ember-power-select-multiple-option-border-radius: $ember-power-select-default-border-radius !default;
+.ember-power-select-option {
+  padding-left: 3rem;
+  position: relative;
+}
 
-// Other
-$ember-power-select-focus-box-shadow: none !default;
-$ember-power-select-dropdown-margin: 0 !default; // Margin between the dropdown and the trigger
-$ember-power-select-dropdown-box-shadow: none !default;
-$ember-power-select-line-height: 1.75 !default;
-$ember-power-select-trigger-icon-color: $ember-power-select-border-color !default;
-$ember-power-select-clear-btn-margin: 25px !default;
-$ember-power-select-option-padding: 8px !default;
-$ember-power-select-number-of-visible-options: 7 !default;
-$ember-power-select-focus-outline: null !default;
-$ember-power-select-trigger-ltr-padding: 0 16px 0 0 !default;
-$ember-power-select-trigger-rtl-padding: 0 0 0 16px !default;
-$ember-power-select-multiple-option-padding: 0 4px !default;
-$ember-power-select-multiple-option-line-height: 1.45 !default;
+.ember-power-select-option[aria-selected="true"],
+.ember-power-select-option[aria-current="true"] {
+  background-color: #E8EBEE;
+  color: #0F68C9;
+  text-decoration: underline;
+
+   &:before {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    font-size: 7px;
+    z-index: 2;
+    font-family: vlaanderen_iconfont;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    text-decoration: none;
+    text-transform: none;
+    content: "\E00C";
+    color: #0F68C9;
+  }
+}
+
+.ember-power-select-selected-item {
+  margin-left: 0;
+}
+
+
+/* Icon restyle for steps (need to reformat)
+ ========================================================================== */
+
+.step .ember-power-select-status-icon {
+  display: block;
+  border: none;
+  width: auto;
+  height: auto;
+}
+
+.step .ember-power-select-status-icon:after {
+  right: 1.5rem;
+  position: absolute;
+  top: 1.2rem;
+  content: "\E022";
+  color: #666;
+  font-family: vlaanderen_iconfont!important;
+  font-size: 2rem;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
