--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1466,6 +1466,7 @@ i.input-field__icon {
   tables
   Redefine tables here.
  ========================================================================== */
+.data-table--nowrap table.data-table th,
 table.data-table.data-table--nowrap th {
   white-space: nowrap; }
 
@@ -1735,6 +1736,10 @@ p.uppercase {
 .text-overflow-ellipsis--40 {
   max-width: 40rem; }
 
+@media (max-width: 766px) {
+  dt.contact-card__data__title {
+    display: block !important; } }
+
 /* ==========================================================================
   accordion
   Style the accordion here.
@@ -1874,6 +1879,9 @@ p.uppercase {
     font-size: 1.4rem;
     line-height: 1.4;
     display: inline-block; }
+  @media (max-width: 766px) {
+    .document-miniature.document-miniature--tiny .document-miniature__type {
+      display: none; } }
 
 /* ==========================================================================
   drawer
@@ -2182,6 +2190,13 @@ p.uppercase {
   background-color: #F3F5F6;
   transition: all 200ms; }
 
+/* make sure buttons don't overflow when in info-tiles */
+.info-tile__footer .button.button--block {
+  padding: 0 0.5rem;
+  white-space: nowrap;
+  overflow: hidden !important;
+  text-overflow: ellipsis; }
+
 /* ==========================================================================
   Style the layout of the app here
  ========================================================================== */
@@ -2271,30 +2286,44 @@ ul.bullet-list li {
   list-style-type: disc;
   list-style: disc; }
 
+ul.dashed-list,
+ol.dashed-list {
+  margin: 0 0 1rem 1rem; }
+
+ul.dashed-list li,
+ol.dashed-list li {
+  position: relative;
+  padding-left: 2rem; }
+  ul.dashed-list li:before,
+  ol.dashed-list li:before {
+    display: block;
+    content: "-";
+    margin-right: 1rem;
+    position: absolute;
+    left: 0rem;
+    top: 0.1rem; }
+
 /* preview list */
-ul.preview-list {
-  min-height: 30rem;
-  overflow-y: auto;
-  overflow-x: none;
-  padding: 3rem 1.5rem; }
-  ul.preview-list li {
-    display: inline-block;
-    cursor: pointer; }
-    ul.preview-list li:hover .preview-list__image {
-      box-shadow: 0 0 6px 0 #0F68C9; }
-    ul.preview-list li:hover .preview-list__name {
-      color: #0F68C9; }
-  ul.preview-list .preview-list__image {
-    width: 16rem;
-    height: 20rem;
-    display: block;
-    box-shadow: 0 0 6px 0 #CBD2DA;
-    overflow: hidden; }
-  ul.preview-list .preview-list__name {
-    display: block;
-    padding: 1rem 0;
-    line-height: 1.2;
-    margin-bottom: 1rem; }
+ul.preview-list li {
+  display: inline-block;
+  cursor: pointer; }
+  ul.preview-list li:hover .preview-list__image {
+    box-shadow: 0 0 6px 0 #0F68C9; }
+  ul.preview-list li:hover .preview-list__name {
+    color: #0F68C9; }
+
+ul.preview-list .preview-list__image {
+  width: 16rem;
+  height: 20rem;
+  display: block;
+  box-shadow: 0 0 6px 0 #CBD2DA;
+  overflow: hidden; }
+
+ul.preview-list .preview-list__name {
+  display: block;
+  padding: 1rem 0;
+  line-height: 1.2;
+  margin-bottom: 1rem; }
 
 /* ==========================================================================
   loader
@@ -2404,6 +2433,12 @@ ul.preview-list {
 
 /* modal lists
  ========================================================================== */
+.modal-dialog ul.preview-list {
+  min-height: 30rem;
+  overflow-y: auto;
+  overflow-x: none;
+  padding: 3rem 1.5rem; }
+
 .modal-dialog__content--sectioned > * {
   max-height: 20rem;
   overflow: auto; }
@@ -2744,6 +2779,13 @@ section.drilldown__subcolumn.drilldown__subcolumn--active {
 .sidebar .side-navigation__group {
   padding-top: 1rem;
   border: none; }
+
+.side-navigation__item ul.side-navigation__group {
+  display: block;
+  font-size: 95%; }
+
+.side-navigation__item ul.side-navigation__group .side-navigation__item:first-child a {
+  padding-top: 0; }
 
 .side-navigation__item {
   padding: 0; }
